--- a/web/sass/help.scss
+++ b/web/sass/help.scss
@@ -63,14 +63,11 @@
 				cursor: pointer;
 			}
 			em{
+				width: 8px;
 				margin-right: 30px;
 				float: left;
-				img{
-					margin-top: 15px;
-				}
 			}
 			span{
-				@extend em;
 				&.icons{
 					float: right;
 					margin-top: 15px;
@@ -96,7 +93,7 @@
 				line-height: 30px;
 				font-size: 13px;
 				margin: 15px 0;
-				padding-left: 40px;
+				padding-left: 21px;
 				padding-right: 20px;
 				display: none;
 				strong{
