--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
@@ -20,7 +20,7 @@
             <span>联系我们</span>
             <ul>
                 <li><a href="{{ path('_default_support') }}" title="帮助中心">帮助中心</a></li>
-                <li><a href="https://www.researchpanelasia.com/contact/" title="合作咨询" target="_blank">合作咨询</a></li>
+                <li><a href="http://www.d8aspring.com/contact-us/" title="合作咨询" target="_blank">合作咨询</a></li>
                 <li><a href="{{ path('_default_about_regulations') }}" title="会员协议">会员协议</a></li>
             </ul>
         </div>
