--- a/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
@@ -224,11 +224,7 @@
 具体有关支付宝账户注册及认证的问题，您可以查询支付宝网站 www.alipay.com 或致电支付宝客服热线：0571-88156688（全天24小时服务）</p>
             </li>
             <li>
-                <div class="title"><em>3</em><span>积分兑换没有绑定手机</span><span class="icons"></span></div>
-                <p>新网站兑换手机费或者支付不需要绑定手机号就可以直接兑换，因此这一项问题咨询可以暂时取消。等以后加了限制条件，可再作修改。</p>
-            </li>
-            <li>
-                <div class="title"><em>4</em><span>支付宝兑换失败原因</span><span class="icons"></span></div>
+                <div class="title"><em>3</em><span>支付宝兑换失败原因</span><span class="icons"></span></div>
                 <p>您的提交的支付宝兑换失败，有以下几点原因：<br>
 1.无该支付宝账户<br>
 2.支付宝账户和姓名不符<br>
@@ -236,74 +232,74 @@
 3.恶意兑换</p>
             </li>
             <li>
-                <div class="title"><em>5</em><span>帮您核查支付宝兑换情况</span><span class="icons"></span></div>
+                <div class="title"><em>4</em><span>帮您核查支付宝兑换情况</span><span class="icons"></span></div>
                 <p>如果您需要核查，请将您的支付宝帐号和申请兑换积分日期发送到客服中心。我们将帮您核查！</p>
             </li>
             <li>
-                <div class="title"><em>6</em><span>支付宝恶意兑换定义</span><span class="icons"></span></div>
+                <div class="title"><em>5</em><span>支付宝恶意兑换定义</span><span class="icons"></span></div>
                 <p>支付宝恶意兑换的定义为：<br>
 1.用户违反《会员协议》的约定，拥有多个91问问账户<br>
 2.多个91问问账户申请兑换到一个支付宝账户<br>
 请您确认一下，您是否存在以上情况？</p>
             </li>
             <li>
-                <div class="title"><em>7</em><span>身份证保证安全(支付宝）</span><span class="icons"></span></div>
-                <p>91问问沿用的积粒网的设置，支付宝修改用户之间修改即可，无需提供任何信息。</p>
+                <div class="title"><em>6</em><span>身份证保证安全(支付宝）</span><span class="icons"></span></div>
+                <p>91问问沿用的积粒网的设置，支付宝修改用户直接修改即可，无需提供任何信息。</p>
             </li>
             <li>
-                <div class="title"><em>8</em><span></span>更改支付宝账户<span class="icons"></span></div>
+                <div class="title"><em>7</em><span></span>更改支付宝账户<span class="icons"></span></div>
                 <p>点击“兑换中心”，进入支付宝兑换页面，点击支付宝账号边上的修改按钮进行修改即可。</p>
             </li>
             <li>
-                <div class="title"><em>9</em><span></span>积分未返还<span class="icons"></span></div>
+                <div class="title"><em>8</em><span></span>积分未返还<span class="icons"></span></div>
                 <p>如果兑换不成功，积分会自动返还（大约10个工作日之内）。请您耐心等待！</p>
             </li>
             <li>
-                <div class="title"><em>10</em><span>支付宝账号只能对应一个91问问</span><span class="icons"></span></div>
+                <div class="title"><em>9</em><span>支付宝账号只能对应一个91问问</span><span class="icons"></span></div>
                 <p>一个支付宝只能对应一个91问问帐号。否则系统将会视为恶意兑换。</p>
             </li>
             <li>
-                <div class="title"><em>11</em><span>支付宝名义人是什么</span><span class="icons"></span></div>
+                <div class="title"><em>10</em><span>支付宝名义人是什么</span><span class="icons"></span></div>
                 <p>支付宝名义人是您在注册支付宝时填写的实名。</p>
             </li>
             <li>
-                <div class="title"><em>12</em><span>手机费兑换何时到账</span><span class="icons"></span></div>
+                <div class="title"><em>11</em><span>手机费兑换何时到账</span><span class="icons"></span></div>
                 <p>手机费兑换是隔天到账，节假日及周末延后。</p>
             </li>
             <li>
-                <div class="title"><em>13</em><span>手机费兑换总是失败</span><span class="icons"></span></div>
+                <div class="title"><em>12</em><span>手机费兑换总是失败</span><span class="icons"></span></div>
                 <p>手机费兑换失败原因：<br>
 1.有多个账户兑换到同一个手机号码中。系统会自动判定不予兑换。<br>
 2.我们是通过移动运营商等兑换您的手机费，由于部分地区对小面额的充值不稳定的关系，导致多次充值失败。建议您多累积一点积分。大面额的充值比较稳定。</p>
             </li>
             <li>
-                <div class="title"><em>14</em><span>支付宝兑换何时到账</span><span class="icons"></span></div>
+                <div class="title"><em>13</em><span>支付宝兑换何时到账</span><span class="icons"></span></div>
                 <p>支付宝的兑换工作一般需要十个工作日左右完成。每周一兑换上周一至周日的兑换申请，如果提交的兑换请求不满2周，敬请耐心等候。</p>
             </li>
             <li>
-                <div class="title"><em>15</em><span>支付宝兑换显示成功，但未收到</span><span class="icons"></span></div>
+                <div class="title"><em>14</em><span>支付宝兑换显示成功，但未收到</span><span class="icons"></span></div>
                 <p>请联系客服，提供兑换日期、91问问调查网账号，我们将告知您支付宝流水号，进行查询。</p>
             </li>
             <li>
-                <div class="title"><em>16</em><span>支付宝有了流水号就是没收到</span><span class="icons"></span></div>
+                <div class="title"><em>15</em><span>支付宝有了流水号就是没收到</span><span class="icons"></span></div>
                 <p>支付宝的流水号是由支付宝提供给我们的积分兑换成功的凭证，请您联系支付宝客服查询。</p>
             </li>
             <li>
-                <div class="title"><em>17</em><span>支付宝兑换不能输入身份证</span><span class="icons"></span></div>
+                <div class="title"><em>16</em><span>支付宝兑换不能输入身份证</span><span class="icons"></span></div>
                 <p>请确认是否有输入正确的身份证号码。可以提供身份证明（身份证或其他可以证明您身份的证件，请将您的身份证扫描以邮件附件的形式传送给客服中心），以便我们可以帮助您绑定身份证号码。</p>
             </li>
             <li>
-                <div class="title"><em>18</em><span>修改绑定的支付宝</span><span class="icons"></span></div>
-                <p>91问问沿用的积粒网的设置，支付宝修改用户之间修改即可，无需提供任何信息。</p>
+                <div class="title"><em>17</em><span>修改绑定的支付宝</span><span class="icons"></span></div>
+                <p>91问问沿用的积粒网的设置，支付宝修改用户直接修改即可，无需提供任何信息。</p>
             </li>
             <li>
-                <div class="title"><em>19</em><span>支付宝如何支付手续费</span><span class="icons"></span></div>
+                <div class="title"><em>18</em><span>支付宝如何支付手续费</span><span class="icons"></span></div>
                 <p>由于支付宝方面大幅提高积分兑换的手续费，91问问网本着用户利益至上，一直以来承担着替用户支付手续费。现91问问网已经上线积分兑换手机费功能，您依然可以用2010分兑换成20元手机费。今后，我们会上线更多兑换的途径，使您有更多的兑换选择。<br>
                     支付宝每笔兑换会收取1元的手续费。 2014-05-27日起，对于2000米粒兑换20元支付宝现金的每笔兑换，手续费为0.5元/次(余下0.5元由积粒网承担)； 对于3000米粒兑换30元支付宝现金的每笔兑换，手续费为0.3元/次(余下0.7元由积粒网承担)。 而5000米粒兑换50元支付宝现金的兑换，积粒网将会全额承担兑换手续费。
                 </p>
             </li>
             <li>
-                <div class="title"><em>20</em><span>支付宝兑换与手机兑换积分数量</span><span class="icons"></span></div>
+                <div class="title"><em>19</em><span>支付宝兑换与手机兑换积分数量</span><span class="icons"></span></div>
                 <p>手机费兑换：20元手机费->2010积分起兑。<br>
 2010积分=20元手机费<br>
 2995积分=30元手机费<br>
@@ -316,7 +312,7 @@
 其他</p>
             </li>
             <li>
-                <div class="title"><em>21</em><span>网络太慢</span><span class="icons"></span></div>
+                <div class="title"><em>20</em><span>网络太慢</span><span class="icons"></span></div>
                 <p>1.给您带来的不便深感抱歉。由于91问问调查网是一家全球性公司，服务器在海外，造成国内访问速度缓慢。<br>
 2.我们的系统团队始终致力于开发和改善此类功能，希望为您提供更好的服务。
 </p>
