--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/show.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/show.html.twig
@@ -46,7 +46,7 @@
                     <div class="loginTips"><a href="{{ path('_user_login') }}">请登录后</a>参加投票。</div>
                 {% endif %}
                 </div>
-                <a class="backLink" href="{{ path('jili_frontend_vote_index') }}">返回快速问答一览></a>
+                <a class="backLink" href="{{ path('jili_frontend_vote_index') }}">返回快速问答一览>></a>
             </div>
             </form>
         </div>
