--- a/web/sass/voteDetail.scss
+++ b/web/sass/voteDetail.scss
@@ -19,7 +19,7 @@
  		text-align: center;
  		width: 100%;
  		background: #fdf2e7;
- 		margin-top: 29px;
+ 		margin-top: 54px;
  	}
  	.relate{
  		margin: 25px 10px 27px;
@@ -49,8 +49,9 @@
  			background: #f3f5f8;
  			border: 1px solid #e6e7eb;
  			padding: 13px 15px;
- 			margin: 10px 0;
+ 			margin: 14px 0;
  			color: #333;
+ 			line-height: 23px;
  			.fst{
  				margin-bottom: 4px;
  			}
