modify pic of role

--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
@@ -43,7 +43,7 @@
 				</div>
 			</div> -->
 			<div class="maintenance">
-				<div class="con">系统正在维护中，非常抱歉给您带来了不便。</div>
+				<div class="con">系统正在维护中...<br>非常抱歉给您带来了不便。</div>
 			</div>
 		</div>
 	</div>
