--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
@@ -17,7 +17,7 @@
 		<div class="tabCon offer99">
 			<!-- <iframe src='http://app.offer99.com/index.php?pid=f4b42b65ce528bb151ea6e2eb5a01692&userid=1132938' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe> -->
 			<div class="maintenance">
-				<div class="con">系统正在维护中，非常抱歉给您带来了不便。</div>
+				<div class="con" style=" margin-left: -38px;">系统正在维护中...<br>非常抱歉给您带来了不便。</div>
 			</div>
 		</div>
 	</div>
