--- a/web/sass/advertisement.scss
+++ b/web/sass/advertisement.scss
@@ -231,10 +231,12 @@
 			width: 100%;
 			text-align: center;
 			height: 260px;
-			padding-top: 200px;
-			background: url(../img/questionnaire/normalface.png) no-repeat 180px 150px;
+			padding-top: 235px;
+			background: url(../img/questionnaire/normalface.png) no-repeat 424px 130px;
 			.con{
 				font-size: 16px;
+				color: #a1a1a1;
+				line-height: 25px;
 			}
 		}
 	}
@@ -309,7 +311,7 @@
 	height: 159px;
 	position: absolute;
 	top: 204px;
-	right: -176px;
+	right: -154px;
 	display: none;
 	z-index: 9999;
 	background: url(../img/advertisement/promptCPS.png) no-repeat;
