--- a/src/Wenwen/FrontendBundle/Resources/views/Checkin/info.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Checkin/info.html.twig
@@ -15,7 +15,7 @@
 {% if app.session.get('uid') %}
     <input type="hidden" id="u" value="{{ app.session.get('uid') }}">
 {% else %}
-    <input type="hidden" id="u" value="">;
+    <input type="hidden" id="u" value="">
 {% endif %}
 <div id="iframeDiv"></div>
 <div class="loadingFrame">
@@ -44,6 +44,7 @@
             {% if code %}
             <input type="hidden" id="error_code" class="error" value="{{ code }}">
             {% endif %}
+            <input type="hidden" value="1" name="remember_me">
             <input type="submit" class="login-btn" id="submit_button" tabindex="0" value="登录"/>
             </form>
             <p><a href="{{ path('_user_resetPwd') }}" class="spec right">忘记密码？</a>还没账号，<a href="{{ path('_user_reg') }}">马上注册</a></p>
@@ -55,27 +56,26 @@
     </div>
 </div>
 </div>
-    <div class="quickLogPop" id="wbLogCon" style="display: none;">
-        <div class="quickLCon">
-            <div class="wbTit"><span class="wbIco"></span>微博登录提示<span class="closeBtn"></span></div>
-            <div class="wbText">
-                <p class="l1">微博登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用微博快捷登录，您将无法正常登录哟！</p>
-                <p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
-            </div>
-            <div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('weibo_api_login') }}" class="continueBtn">继续</a></div>
+<div class="quickLogPop" id="wbLogCon" style="display: none;">
+    <div class="quickLCon">
+        <div class="wbTit"><span class="wbIco"></span>微博登录提示<span class="closeBtn"></span></div>
+        <div class="wbText">
+            <p class="l1">微博登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用微博快捷登录，您将无法正常登录哟！</p>
+            <p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
         </div>
+        <div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('weibo_api_login') }}" class="continueBtn">继续</a></div>
     </div>
-    <div class="quickLogPop" id="qqLogCon" style="display: none;">
-        <div class="quickLCon">
-            <div class="wbTit"><span class="qqIco"></span>QQ登录提示<span class="closeBtn"></span></div>
-            <div class="wbText">
-                <p class="l1">QQ登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用QQ快捷登录，您将无法正常登录哟！</p>
-                <p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
-            </div>
-            <div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('qq_api_login') }}" class="continueBtn">继续</a></div>
+</div>
+<div class="quickLogPop" id="qqLogCon" style="display: none;">
+    <div class="quickLCon">
+        <div class="wbTit"><span class="qqIco"></span>QQ登录提示<span class="closeBtn"></span></div>
+        <div class="wbText">
+            <p class="l1">QQ登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用QQ快捷登录，您将无法正常登录哟！</p>
+            <p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
         </div>
+        <div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('qq_api_login') }}" class="continueBtn">继续</a></div>
     </div>
-
+</div>
 {% endblock %}
 
 {% block footer %}
