--- a/web/sass/voteDetail.scss
+++ b/web/sass/voteDetail.scss
@@ -64,12 +64,13 @@
  		padding-left: 130px;
  		padding-right: 20px;
  		li{
- 			line-height: 35px;
+ 			line-height: 41px;
  			span{
  				margin-left: 5px;
  			}
  			label{
  				cursor: pointer;
+ 				font-size: 14px; 
  			}
  		}
  		.btn{
@@ -92,7 +93,7 @@
 			a{
 				&.result{
 					float: right;
-					margin-top: 12px;	
+					margin-top: 11px;	
 				}
 				color: $main-title-color;
 			}
