--- a/web/sass/component/survey.scss
+++ b/web/sass/component/survey.scss
@@ -247,6 +247,15 @@ $count-bg: #f5f5f5;
 	overflow-y: scroll;
 	font-size: 14px;
 	line-height: 24px;
+	&::-webkit-scrollbar {
+	    -webkit-appearance: none;
+	    width: 7px;
+	}
+	&::-webkit-scrollbar-thumb {
+	    border-radius: 4px;
+	    background-color: rgba(0,0,0,.3);
+	    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.3);
+	}
 	.em{
 		color: $main-color;
 	}
