--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -71,7 +71,7 @@ $(document).ready(function(){
 {% if app.request.attributes.get('_route') == '_homepage' %}
 <div class="noticeM">
     <div class="wrap brown fontYH font14">
-        <div class="txt">积粒网将于<strong style="color: #ff0000;">5月9日晚18:00-次日早8:00</strong>开始维护，维护期间您将不能访问网站。给您带来不便，敬请谅解！</div>
+        <div class="txt">积粒网将于<strong style="color: #ff0000;">5月9日晚18:00-次日早8:00</strong>进行维护，维护期间您将不能访问网站。给您带来不便，敬请谅解！</div>
         <div class="unfold font12" id="unfold"><span>点击展开</span><em></em></div>
     </div>
     <div class="noticeCont" id="noticeCont">
