fix pop_survey_window error

--- a/src/Wenwen/FrontendBundle/Resources/views/Survey/_surveyRow.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Survey/_surveyRow.html.twig
@@ -39,7 +39,7 @@
         {% if type_class == 'quick' %}
         <a href="{{ url }}">投票</a>
         {% else %}
-        <a href="{{ url }}" target="_brank" onClick="pop_survey_window(this);return false;" >可回答</a>
+        <a href="{{ url }}" target="_brank">可回答</a>
         {% endif %}
     {% endif %}
     </div>
