--- a/src/Wenwen/FrontendBundle/Resources/views/About/91ww.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/91ww.html.twig
@@ -16,6 +16,7 @@
 		<h2>网站介绍</h2>
 		<ul class="wwIntro w732 con">
 			<li>
+				<p><img src="{{ asset('img/about/about91ww.jpg') }}" alt="91ww"></p>
 				<p class="lh30">"91问问调查网"成立于2009年10月，办公室位于上海，是亚洲领先的在线调研面板提供商dataSpring, Inc. (日本)旗下的中国会员网站。旨在收集中国网民的意见，为政府和企业提供决策的依据。</p>
 				<p class="lh30">我们认为每个人都是社会的决策者！参加"91问问调查网"的有偿问卷，会员在发表自己看法的同时，还可以获得相应的积分，以换取现金报酬或礼品奖励。从网站发布至今，我们已经向中国会员派发了数百万人民币的现金报酬。</p>
 				<p class="lh30">目前，"91问问调查网"是中国国内流量和会员活跃率最高的在线调研网站之一，我们的目标是成为中国最好的在线调研网站。请关注我们，支持我们！</p>
