modify css of homepage

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -612,14 +612,15 @@ body {
     margin-left: 5px; }
 
 .main-con-process {
-  height: 562px;
-  background: url(../img/home/adProcess.png) no-repeat center 155px #EFEFEF;
+  height: 570px;
+  background: url(../img/home/adProcess.png) no-repeat center 175px #EFEFEF;
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  padding-bottom: 30px; }
 
 .procDisc {
   width: 100%;
-  margin-top: 296px; }
+  margin-top: 313px; }
   .procDisc li {
     width: 33%;
     display: inline-block;
@@ -646,7 +647,8 @@ body {
 
 .main-con-reward {
   background: #dedede;
-  padding-bottom: 75px;
+  padding-bottom: 126px;
+  padding-top: 20px;
   overflow: hidden; }
   .main-con-reward .topTit {
     margin-bottom: 80px; }
@@ -726,7 +728,7 @@ body {
   overflow: hidden; }
   .main-con-detail .topTit {
     width: 1000px;
-    margin: 40px auto 80px; }
+    margin: 54px auto 80px; }
   .main-con-detail .party {
     background: url(../img/home/wallCon.png) no-repeat;
     height: 521px;
