--- a/web/css/voteDetail.css
+++ b/web/css/voteDetail.css
@@ -344,7 +344,8 @@ body {
   padding-left: 130px;
   padding-right: 20px; }
   .vote-sub .options li {
-    line-height: 41px; }
+    margin-top: 18px;
+    line-height: 22px; }
     .vote-sub .options li span {
       margin-left: 5px; }
     .vote-sub .options li label {
