--- a/web/sass/voteDetail.scss
+++ b/web/sass/voteDetail.scss
@@ -64,7 +64,8 @@
  		padding-left: 130px;
  		padding-right: 20px;
  		li{
- 			line-height: 41px;
+ 			margin-top: 18px;
+ 			line-height: 22px;
  			span{
  				margin-left: 5px;
  			}
