modify alipay link

--- a/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
@@ -219,7 +219,7 @@
             <li>
                 <div class="title"><em>2</em><span>怎样兑换支付宝</span><span class="icons"></span></div>
                 <p>您在91问问调查网，通过做问卷、参加活动等，积累了至少2050积分之后，就可以通过支付宝兑换现金。<br>请参考以下链接。<br>
-<a href="http://www.91wenwen.net/exchange/alipayInfo" target="_blank">http://www.91wenwen.net/exchange/alipayInfo（支付宝兑换链接）</a> <br>
+<a href="http://www.91wenwen.net/exchange/center" target="_blank">http://www.91wenwen.net/exchange/center（支付宝兑换链接）</a> <br>
 请注意，您必须拥有经过数字认证的支付宝账号，且您的支付宝帐号状态正常。一个91问问账户仅可以关联一个支付宝账户。<br>
 具体有关支付宝账户注册及认证的问题，您可以查询支付宝网站 www.alipay.com 或致电支付宝客服热线：0571-88156688（全天24小时服务）</p>
             </li>
