--- a/web/sass/oldJili.scss
+++ b/web/sass/oldJili.scss
@@ -7,7 +7,6 @@ body{
 	height: 772px;
 	background: url(../img/404/oldJiliNotice.png) no-repeat center center;
 	margin: 30px auto;
-	position: relative;
 	.JLNotCon{
 		width: 570px;
 		height: 470px;
@@ -29,15 +28,15 @@ body{
 			color: #808080;
 			text-align: left;
 		    line-height: 22px;
-		    margin-top: 160px;
+		    margin-top: 25px;
 		    font-size: 12px;
 		}
 		.link{
 			width: 262px;
 		    height: 100px;
-		    position: absolute;
-		    left: 547px;
-		    top: 409px;
+		    text-align: center;
+	        display: inline-block;
+	        padding-top: 30px;
 		}
 	}
 	
