--- a/src/Wenwen/FrontendBundle/Resources/views/Exception/oldJili.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exception/oldJili.html.twig
@@ -1,5 +1,5 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}出错啦：{{ parent() }} {% endblock %}
+{% block title %}积粒网域名变更通知:{{ parent() }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/oldJili.css') }} " rel="stylesheet" type="text/css">
