--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/exchangeHistory.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/exchangeHistory.html.twig
@@ -29,7 +29,7 @@
 					{% for item in pagination %}
 					<tr>
 						<td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
-						<td>{{ item.type }}-{% if item.exType == 1 %}{{ item.targetPoint }}% elseif item.exType == 2 %}{{ item.exchangeItemNumber }}张{% elseif item.exType == 3 %}{{ item.exchangeItemNumber }}元{% elseif item.exType == 4 %}{{ item.exchangeItemNumber }}元{% elseif item.exType == 5 %}{{ item.exchangeItemNumber }}M{% endif %}</td>
+						<td>{{ item.type }}-{% if item.exType == 1 %}{{ item.targetPoint }}{% elseif item.exType == 2 %}{{ item.exchangeItemNumber }}张{% elseif item.exType == 3 %}{{ item.exchangeItemNumber }}元{% elseif item.exType == 4 %}{{ item.exchangeItemNumber }}元{% elseif item.exType == 5 %}{{ item.exchangeItemNumber }}M{% endif %}</td>
 						<td>{{ item.targetPoint }}</td>
 						<td>{% if item.status %} {% if item.status==1 %} 兑换成功 {% elseif item.status==2 %} 兑换失败 {% else %} {% endif %}  {% else %} 处理中 {% endif %}</td>
 					</tr>
