--- a/web/css/404.css
+++ b/web/css/404.css
@@ -351,17 +351,19 @@ body {
   background: #f2f3f5; }
   .main .main-error-con {
     margin: 0 auto;
-    background: url(../img/404/errorbox.png) no-repeat center; }
+    background: url(../img/404/errorbg.png) no-repeat center; }
     .main .main-error-con .errorCon {
       width: 1000px;
       height: 436px;
-      margin: 0 auto;
+      margin: 80px auto;
       position: relative; }
       .main .main-error-con .errorCon .errorText {
         width: 480px;
         position: absolute;
-        top: 178px;
-        left: 455px; }
+        top: 298px;
+        left: 665px;
+        padding: 15px;
+        background: #f2f2f2; }
         .main .main-error-con .errorCon .errorText .txt {
           font-size: 14px;
           line-height: 24px; }
@@ -379,15 +381,6 @@ body {
             -moz-border-radius: 3px;
             -ms-border-radius: 3px;
             -o-border-radius: 3px; }
-  .main .errorBot {
-    height: 152px;
-    margin-top: 20px;
-    background: url(../img/404/wave.png) repeat-x; }
 
 .footer {
-  background: #4b95d7;
-  margin-top: 0;
-  border: none; }
-
-body {
-  background: #4b95d7; }
+  display: none; }
