--- a/web/css/404.css
+++ b/web/css/404.css
@@ -346,24 +346,22 @@ body {
         padding-top: 10px;
         color: #fff; }
 
+body {
+  background: #f5f5f5; }
+
 .main {
-  margin-top: 0;
-  background: #f2f3f5; }
+  margin-top: 0; }
   .main .main-error-con {
     margin: 0 auto;
     background: url(../img/404/errorbg.png) no-repeat center; }
     .main .main-error-con .errorCon {
       width: 1000px;
       height: 436px;
-      margin: 80px auto;
-      position: relative; }
+      margin: 45px auto; }
       .main .main-error-con .errorCon .errorText {
-        width: 480px;
-        position: absolute;
-        top: 298px;
-        left: 665px;
-        padding: 15px;
-        background: #f2f2f2; }
+        padding: 458px 230px;
+        text-align: center;
+        margin: 0 auto; }
         .main .main-error-con .errorCon .errorText .txt {
           font-size: 14px;
           line-height: 24px; }
