--- a/web/sass/advertisement.scss
+++ b/web/sass/advertisement.scss
@@ -233,6 +233,7 @@
 			height: 260px;
 			padding-top: 235px;
 			background: url(../img/questionnaire/normalface.png) no-repeat 424px 130px;
+			display: none;
 			.con{
 				font-size: 16px;
 				color: #a1a1a1;
@@ -248,6 +249,7 @@
 		width: 239px;
 		padding-bottom: 20px;
 		background: url(../img/advertisement/offerwowBgBottom.png) no-repeat bottom right;
+		display: none;
 		h4{
 			padding-left: 25px;
 			height: 50px;
