--- a/web/css/component/form.css
+++ b/web/css/component/form.css
@@ -100,3 +100,8 @@
     *zoom: 1; }
     #pwdStrength b.c1 {
       background: #ff8b3d; }
+
+#signup_email_error ul li {
+  max-width: 280px;
+  line-height: 21px;
+  padding: 8px 0; }
