--- a/web/css/suggest.css
+++ b/web/css/suggest.css
@@ -395,6 +395,11 @@ body {
     #pwdStrength b.c1 {
       background: #ff8b3d; }
 
+#signup_email_error ul li {
+  max-width: 280px;
+  line-height: 21px;
+  padding: 8px 0; }
+
 .main-con {
   padding-top: 20px; }
 
