compress svg file size

--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -32,7 +32,7 @@ $main-ad-color: #eb7020;
 .coinBack{
 	height: 100%;
 	background-image: url(../img/home/coinBack.png);
-	background-image: url(../img/home/coinBack.svg), none;
+	background-image: url(../img/home/coinBack.svgz), none; 
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-attachment: fixed;
